# ghc-nix

./: LICENSE  README.md  ed  flake.nix
ghc-nix/: Main.hs  compile-hs.nix  default.nix  ghc-nix.cabal  shell.nix
nixpkgs-test/: default.nix
prototype/: compile-hs.nix  default.nix
test-project/: Main.hs  Message.hs  test-project.cabal
