cabal-version: 2.0

name:
  ghc-nix
version:
  0.1.0.0
synopsis:
  Build Haskell projects using Nix as a build cache
author:
  Ollie Charles
maintainer:
  ollie@ocharles.org.uk
build-type:
  Simple
data-files:
  compile-hs.nix

executable ghc-nix
  main-is:
    Main.hs
  build-depends:
      aeson >= 2
    , async ^>= 2.2.2
    , base >=4.12 && <4.15
    , containers ^>= 0.6.0.1
    , directory
    , foldl ^>= 1.4.5
    , ghc-paths ^>= 0.1.0.12
    , ghc >= 8.6.5, ghc < 9
    , text
    , turtle
    , unordered-containers
    , safe-exceptions
    , filepath
    , unix
  default-language:
    Haskell2010
  ghc-options:
    -O2 -Wall -fwarn-incomplete-uni-patterns -fwarn-redundant-constraints -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Paths_ghc_nix
